2014-06-24  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added support for ff_threshold to
	'set new_local_component'. Fixed that component id can not be set
	correctly by 'set new_local_component'.

2014-06-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Fixed
	some queries.

2014-06-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php: Visual changes
	on the inputs.

2014-06-23  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/pt.po
	  include/languages/pt.mo
	  include/languages/pt_BR.po
	  include/languages/pt_BR.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/sk.po
	  include/languages/sk.mo
	  include/languages/tr.po
	  include/languages/tr.mo
	  include/languages/zh_CN.po
	  include/languages/zh_CN.mo: Updated translations.

2014-06-22  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_edit_modules.php: Fixed unexpected update
	of 'module_interval'.

2014-06-22  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added support for 'each_ff' and
	'ff_timeout' to 'set new_network_component', 
	'set new_plugin_component' and 'set new_snmp_component'.
	Fixed that component id can not be set correctly by
	'set new_*_component'.
